# ExtraLinkDiscover

./: Cargo.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-11-extralinkdiscover-plan.md
docs/superpowers/specs/: 2026-05-11-extralinkdiscover-design.md
src/: app.rs  crawler.rs  filter.rs  lib.rs  main.rs
tests/: crawler_test.rs  filter_test.rs
