[package]
name = "ExtraLinkDiscover"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.21"
open = "5"
csv = "1.3"
url = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shell32"] }